app/rest/css/thumbnail-display.css
#all-thumbnails { margin: 0; padding: 0 15px 15px 15px; }

.thumbnail-container {
  float: left;
  position: relative;
  margin: 0 5px 0 0;
  width: 84px;
  height: 100px;
  /*  border: 1px solid red;*/
}

.thumbnail {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 74px;
  height: 74px;
  padding: 5px;
  display: block;
  border: none;
/*  border: 1px solid blue;*/
}
.thumbnail img {
  position: absolute;
  padding: 4px;
  border: 1px solid #DDD;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px
  border-radius: 4px;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
}
.centered {
  left: 50%;
  top: 50%;
}

.thumbnail-container .label {
  position: absolute;
  top: 84px;
  left: 0;
  font-size: 12px;
  height: 16px;
  width: 84px;
  overflow: hidden;
  line-height: 16px;
  text-align: center;
  padding: 0; /* overwrite bootstrap */
}

/*.thumbnail-container a .icon { width: 25px; height: 25px; opacity: 0; }*/
.thumbnail-container a .icon { width: 16px; height: 16px; opacity: 0; }

.thumbnail-container a:hover .icon { opacity: 0.5; }

/*.thumbnail-container a .delete { left: 59px; top: 0; }*/
.thumbnail-container a .delete { left: 68px; top: 0; }
.thumbnail-container a .delete:hover { opacity: 1; }

/*.thumbnail-container a .back { left: 0px; top: 30px; }*/
.thumbnail-container a .back { left: 0px; top: 34px; }
.thumbnail-container a .back:hover { opacity: 0.8; }

/*.thumbnail-container a .fwd { left: 59px; top: 30px; }*/
.thumbnail-container a .fwd { left: 68px; top: 34px; }
.thumbnail-container a .fwd:hover { opacity: 0.8; }

.thumbnail-container a .map-x { width: 10px; height: 10px; }

.modal-body { position: relative; max-height: 600px; }
.modal-body .modal-image { width: 530px; }
.modal-body .modal-map { width: 530px; }
.modal-body .modal-map-x { position: absolute; width: 20px; height: 20px; }
.modal-body a { width: 100%; height: 100%; }

.add-image-container {
  position: relative;
  width: 84px;
  height: 100px;
  float: left;
}
.add-image-container .add-image {
  margin: 20px;
  width: 44px;
  height: 44px;
  opacity: 0.3;

}
.add-image-container .add-image:hover { opacity: 0.8; }

